[tool.poetry]
name = "Intro to Asynchronous Python with Asyncio"
version = "0.1.0"
description = "Execute tasks asynchronously in Python using Asyncio."
authors = ["Todd Birchard <todd@hackersandslackers.com>"]
maintainers = ["Todd Birchard <todd@hackersandslackers.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/hackersandslackers/intro-to-asyncio-concurrency/"
repository = "https://github.com/hackersandslackers/asyncio-tutorial-part1"
documentation = "https://hackersandslackers.com/intro-to-asyncio-concurrency/"
keywords = [
  "Asyncio",
  "Asynchronous",
  "I/O",
  "Concurrency",
  "Python"
]

[tool.poetry.dependencies]
python ="^3.9"
asyncio = "*"
loguru = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
mypy = "*"
black = "^21.12b0"
isort = "5.10.1"
flake8 = "^4.0.1"
pylint = "*"

[tool.poetry.scripts]
run = "main:init_script"

[tool.poetry.urls]
issues = "https://github.com/hackersandslackers/asyncio-tutorial-part1/issues"

[build-system]
requires = ["poetry>=1.1.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["asyncio_intro_part1"]

[tool.black]
line-length = 120
